{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 399,
  "lineage": "102a5ee1-05bb-0b3a-c9d1-056e6873f908",
  "resources": [
    {
      "module": "module.clickhouse",
      "mode": "data",
      "type": "aws_subnet",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:711387107956:subnet/subnet-0ae7ddcac23915574",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "available_ip_address_count": 219,
            "cidr_block": "10.0.11.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae7ddcac23915574",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "711387107956",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "observability-platform-dev-private-subnet-1",
              "Project": "observability-platform",
              "kubernetes.io/cluster/observability-platform-dev-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-09ea04bebf9fca5da"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.clickhouse",
      "mode": "managed",
      "type": "aws_instance",
      "name": "clickhouse",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0827b3068f1548bf6",
            "arn": "arn:aws:ec2:ap-southeast-1:711387107956:instance/i-014fef65d720976f9",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/xvdf",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:711387107956:key/6c49865f-114d-4807-a538-94638a14a015",
                "tags": {
                  "Environment": "dev",
                  "ManagedBy": "Terraform",
                  "Name": "observability-platform-dev-clickhouse-data",
                  "Project": "observability-platform"
                },
                "tags_all": {
                  "Environment": "dev",
                  "ManagedBy": "Terraform",
                  "Name": "observability-platform-dev-clickhouse-data",
                  "Project": "observability-platform"
                },
                "throughput": 125,
                "volume_id": "vol-0a8126c1e963f1379",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "observability-platform-dev-clickhouse-profile",
            "id": "i-014fef65d720976f9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "KeyPair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01ff2146ba14ca654",
            "private_dns": "ip-10-0-11-92.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.11.92",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:711387107956:key/6c49865f-114d-4807-a538-94638a14a015",
                "tags_all": {
                  "Environment": "dev",
                  "ManagedBy": "Terraform",
                  "Project": "observability-platform"
                },
                "throughput": 125,
                "volume_id": "vol-07525cb2027d934de",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ae7ddcac23915574",
            "tags": {
              "Name": "observability-platform-dev-clickhouse"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "observability-platform-dev-clickhouse",
              "Project": "observability-platform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b93775880a516b9c"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.clickhouse.aws_iam_instance_profile.clickhouse",
            "module.clickhouse.aws_iam_role.clickhouse",
            "module.clickhouse.data.aws_ami.ubuntu",
            "module.security_groups.aws_security_group.clickhouse",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:711387107956:security-group/sg-0b779ee37f87e204b",
            "description": "Security group for EKS cluster control plane",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow cluster egress access to the Internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b779ee37f87e204b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow workstation to communicate with the cluster API Server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "observability-platform-dev-eks-cluster-2025102916210127100000000f",
            "name_prefix": "observability-platform-dev-eks-cluster-",
            "owner_id": "711387107956",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "observability-platform-dev-eks-cluster-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "observability-platform-dev-eks-cluster-sg",
              "Project": "observability-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ea04bebf9fca5da"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet",
            "from_port": 0,
            "id": "sgrule-1751739098",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b779ee37f87e204b",
            "security_group_rule_id": "sgr-0280468baac6c3f8a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_ingress_workstation_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-497245736",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b779ee37f87e204b",
            "security_group_rule_id": "sgr-0a46fa56fcaf80afe",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.jaeger",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jaeger",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0827b3068f1548bf6",
            "arn": "arn:aws:ec2:ap-southeast-1:711387107956:instance/i-08098bc9376c3af83",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "observability-platform-dev-jaeger-profile",
            "id": "i-08098bc9376c3af83",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "KeyPair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06e64314c7001b0f5",
            "private_dns": "ip-10-0-11-14.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.11.14",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:711387107956:key/6c49865f-114d-4807-a538-94638a14a015",
                "tags_all": {
                  "Environment": "dev",
                  "ManagedBy": "Terraform",
                  "Project": "observability-platform"
                },
                "throughput": 125,
                "volume_id": "vol-09301f6528b0059da",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ae7ddcac23915574",
            "tags": {
              "Name": "observability-platform-dev-jaeger"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "observability-platform-dev-jaeger",
              "Project": "observability-platform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-004fd0270bd794681"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.clickhouse.aws_iam_instance_profile.clickhouse",
            "module.clickhouse.aws_iam_role.clickhouse",
            "module.clickhouse.aws_instance.clickhouse",
            "module.clickhouse.data.aws_ami.ubuntu",
            "module.jaeger.aws_iam_instance_profile.jaeger",
            "module.jaeger.aws_iam_role.jaeger",
            "module.jaeger.data.aws_ami.ubuntu",
            "module.security_groups.aws_security_group.clickhouse",
            "module.security_groups.aws_security_group.jaeger",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "clickhouse",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:711387107956:security-group/sg-0b93775880a516b9c",
            "description": "Security group for ClickHouse server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b93775880a516b9c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "ClickHouse HTTP interface",
                "from_port": 8123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8123
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "ClickHouse interserver HTTP",
                "from_port": 9009,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9009
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "ClickHouse native protocol",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "observability-platform-dev-clickhouse-20251029162101893400000013",
            "name_prefix": "observability-platform-dev-clickhouse-",
            "owner_id": "711387107956",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "observability-platform-dev-clickhouse-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "observability-platform-dev-clickhouse-sg",
              "Project": "observability-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ea04bebf9fca5da"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_additional",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:711387107956:security-group/sg-016dde60d3291bc91",
            "description": "Additional security group for EKS cluster communication",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow EKS pods to connect to ClickHouse HTTP",
                "from_port": 8123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b93775880a516b9c"
                ],
                "self": false,
                "to_port": 8123
              },
              {
                "cidr_blocks": [],
                "description": "Allow EKS pods to connect to ClickHouse native",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b93775880a516b9c"
                ],
                "self": false,
                "to_port": 9000
              },
              {
                "cidr_blocks": [],
                "description": "Allow EKS pods to connect to Kafka",
                "from_port": 9092,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f0adc9315339503d"
                ],
                "self": false,
                "to_port": 9098
              },
              {
                "cidr_blocks": [],
                "description": "Allow EKS pods to connect to OpenSearch",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01b739b239277cd04"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow EKS pods to connect to PostgreSQL",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03ae66ae92ea9ac77"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "Allow EKS pods to send traces to Jaeger",
                "from_port": 14250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-004fd0270bd794681"
                ],
                "self": false,
                "to_port": 14250
              }
            ],
            "id": "sg-016dde60d3291bc91",
            "ingress": [],
            "name": "observability-platform-dev-eks-additional-20251029162103795800000016",
            "name_prefix": "observability-platform-dev-eks-additional-",
            "owner_id": "711387107956",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "observability-platform-dev-eks-additional-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "observability-platform-dev-eks-additional-sg",
              "Project": "observability-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ea04bebf9fca5da"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.clickhouse",
            "module.security_groups.aws_security_group.jaeger",
            "module.security_groups.aws_security_group.msk",
            "module.security_groups.aws_security_group.opensearch",
            "module.security_groups.aws_security_group.rds",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jaeger",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:711387107956:security-group/sg-004fd0270bd794681",
            "description": "Security group for Jaeger Collector",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-004fd0270bd794681",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Jaeger Admin port",
                "from_port": 14269,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 14269
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Jaeger Collector HTTP",
                "from_port": 14268,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 14268
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Jaeger Collector gRPC",
                "from_port": 14250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 14250
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Zipkin compatible endpoint",
                "from_port": 9411,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9411
              }
            ],
            "name": "observability-platform-dev-jaeger-20251029162101861000000012",
            "name_prefix": "observability-platform-dev-jaeger-",
            "owner_id": "711387107956",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "observability-platform-dev-jaeger-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "observability-platform-dev-jaeger-sg",
              "Project": "observability-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ea04bebf9fca5da"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "msk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:711387107956:security-group/sg-0f0adc9315339503d",
            "description": "Security group for MSK Kafka cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f0adc9315339503d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "JMX Exporter",
                "from_port": 11001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 11001
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Kafka IAM",
                "from_port": 9098,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9098
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Kafka SASL/SCRAM",
                "from_port": 9096,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9096
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Kafka TLS",
                "from_port": 9094,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9094
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Kafka plaintext",
                "from_port": 9092,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9092
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Node Exporter",
                "from_port": 11002,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 11002
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Zookeeper TLS",
                "from_port": 2182,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2182
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Zookeeper",
                "from_port": 2181,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2181
              }
            ],
            "name": "observability-platform-dev-msk-20251029162101804400000011",
            "name_prefix": "observability-platform-dev-msk-",
            "owner_id": "711387107956",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "observability-platform-dev-msk-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "observability-platform-dev-msk-sg",
              "Project": "observability-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ea04bebf9fca5da"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "opensearch",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:711387107956:security-group/sg-01b739b239277cd04",
            "description": "Security group for OpenSearch",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01b739b239277cd04",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "OpenSearch HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "observability-platform-dev-opensearch-20251029162101272500000010",
            "name_prefix": "observability-platform-dev-opensearch-",
            "owner_id": "711387107956",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "observability-platform-dev-opensearch-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "observability-platform-dev-opensearch-sg",
              "Project": "observability-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ea04bebf9fca5da"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:711387107956:security-group/sg-03ae66ae92ea9ac77",
            "description": "Security group for RDS PostgreSQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03ae66ae92ea9ac77",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "PostgreSQL access from VPC",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "observability-platform-dev-rds-20251029171815847700000001",
            "name_prefix": "observability-platform-dev-rds-",
            "owner_id": "711387107956",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "observability-platform-dev-rds-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "observability-platform-dev-rds-sg",
              "Project": "observability-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ea04bebf9fca5da"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-084404ed8409f423c",
            "arn": "arn:aws:ec2:ap-southeast-1:711387107956:elastic-ip/eipalloc-084404ed8409f423c",
            "association_id": "eipassoc-0fa9d5e3a0f871ff4",
            "domain": "vpc",
            "id": "eipalloc-084404ed8409f423c",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0ce8be6bf1d4a3cc0",
            "private_dns": "ip-10-0-1-105.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.105",
            "public_dns": "ec2-54-255-109-176.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.255.109.176",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "observability-platform-dev-nat-eip-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "observability-platform-dev-nat-eip-1",
              "Project": "observability-platform"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0097dcb068862c323",
            "arn": "arn:aws:ec2:ap-southeast-1:711387107956:elastic-ip/eipalloc-0097dcb068862c323",
            "association_id": "eipassoc-0bd7d150898186877",
            "domain": "vpc",
            "id": "eipalloc-0097dcb068862c323",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0d682396633c255d7",
            "private_dns": "ip-10-0-2-169.ap-southeast-1.compute.internal",
            "private_ip": "10.0.2.169",
            "public_dns": "ec2-18-142-216-240.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.142.216.240",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "observability-platform-dev-nat-eip-2"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "observability-platform-dev-nat-eip-2",
              "Project": "observability-platform"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b47f26b38d75d02d",
            "arn": "arn:aws:ec2:ap-southeast-1:711387107956:elastic-ip/eipalloc-0b47f26b38d75d02d",
            "association_id": "eipassoc-02834bb8f59c8351b",
            "domain": "vpc",
            "id": "eipalloc-0b47f26b38d75d02d",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0b55e52304bfa4a71",
            "private_dns": "ip-10-0-3-38.ap-southeast-1.compute.internal",
            "private_ip": "10.0.3.38",
            "public_dns": "ec2-13-229-68-166.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.229.68.166",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "observability-platform-dev-nat-eip-3"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "observability-platform-dev-nat-eip-3",
              "Project": "observability-platform"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:711387107956:internet-gateway/igw-02837aa9a908b2bb2",
            "id": "igw-02837aa9a908b2bb2",
            "owner_id": "711387107956",
            "tags": {
              "Name": "observability-platform-dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "observability-platform-dev-igw",
              "Project": "observability-platform"
            },
            "vpc_id": "vpc-09ea04bebf9fca5da"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-084404ed8409f423c",
            "association_id": "eipassoc-0fa9d5e3a0f871ff4",
            "connectivity_type": "public",
            "id": "nat-0be4db2c6daef15cf",
            "network_interface_id": "eni-0ce8be6bf1d4a3cc0",
            "private_ip": "10.0.1.105",
            "public_ip": "54.255.109.176",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0584e9080cb2aafd8",
            "tags": {
              "Name": "observability-platform-dev-nat-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "observability-platform-dev-nat-1",
              "Project": "observability-platform"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0097dcb068862c323",
            "association_id": "eipassoc-0bd7d150898186877",
            "connectivity_type": "public",
            "id": "nat-082da545409792292",
            "network_interface_id": "eni-0d682396633c255d7",
            "private_ip": "10.0.2.169",
            "public_ip": "18.142.216.240",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01c795ba4b070cd78",
            "tags": {
              "Name": "observability-platform-dev-nat-2"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "observability-platform-dev-nat-2",
              "Project": "observability-platform"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b47f26b38d75d02d",
            "association_id": "eipassoc-02834bb8f59c8351b",
            "connectivity_type": "public",
            "id": "nat-0957f60ff5787cadb",
            "network_interface_id": "eni-0b55e52304bfa4a71",
            "private_ip": "10.0.3.38",
            "public_ip": "13.229.68.166",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0092422a1445ef5ab",
            "tags": {
              "Name": "observability-platform-dev-nat-3"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "observability-platform-dev-nat-3",
              "Project": "observability-platform"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:711387107956:route-table/rtb-0b01b0e25a45bbeb2",
            "id": "rtb-0b01b0e25a45bbeb2",
            "owner_id": "711387107956",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0be4db2c6daef15cf",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "observability-platform-dev-private-rt-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "observability-platform-dev-private-rt-1",
              "Project": "observability-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ea04bebf9fca5da"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:711387107956:route-table/rtb-0bcedd1c92f39ba7b",
            "id": "rtb-0bcedd1c92f39ba7b",
            "owner_id": "711387107956",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-082da545409792292",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "observability-platform-dev-private-rt-2"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "observability-platform-dev-private-rt-2",
              "Project": "observability-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ea04bebf9fca5da"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:711387107956:route-table/rtb-0eccbd2fe4bd42b45",
            "id": "rtb-0eccbd2fe4bd42b45",
            "owner_id": "711387107956",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0957f60ff5787cadb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "observability-platform-dev-private-rt-3"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "observability-platform-dev-private-rt-3",
              "Project": "observability-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ea04bebf9fca5da"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:711387107956:route-table/rtb-0b590dcb5028fc5a7",
            "id": "rtb-0b590dcb5028fc5a7",
            "owner_id": "711387107956",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02837aa9a908b2bb2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "observability-platform-dev-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "observability-platform-dev-public-rt",
              "Project": "observability-platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ea04bebf9fca5da"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f175f5ff8fe688a",
            "route_table_id": "rtb-0b01b0e25a45bbeb2",
            "subnet_id": "subnet-0ae7ddcac23915574"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ca7b48573b7a8c9",
            "route_table_id": "rtb-0bcedd1c92f39ba7b",
            "subnet_id": "subnet-01e9ffa2fadbf9e42"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c7c33557c9f9a721",
            "route_table_id": "rtb-0eccbd2fe4bd42b45",
            "subnet_id": "subnet-0039023fed1441da7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d8d1c4df0b10608",
            "route_table_id": "rtb-0b590dcb5028fc5a7",
            "subnet_id": "subnet-0584e9080cb2aafd8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f1eae8911e9f74a",
            "route_table_id": "rtb-0b590dcb5028fc5a7",
            "subnet_id": "subnet-01c795ba4b070cd78"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e70f4b268ba0cb8f",
            "route_table_id": "rtb-0b590dcb5028fc5a7",
            "subnet_id": "subnet-0092422a1445ef5ab"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:711387107956:subnet/subnet-0ae7ddcac23915574",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae7ddcac23915574",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "711387107956",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "observability-platform-dev-private-subnet-1",
              "kubernetes.io/cluster/observability-platform-dev-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "observability-platform-dev-private-subnet-1",
              "Project": "observability-platform",
              "kubernetes.io/cluster/observability-platform-dev-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-09ea04bebf9fca5da"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:711387107956:subnet/subnet-01e9ffa2fadbf9e42",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e9ffa2fadbf9e42",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "711387107956",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "observability-platform-dev-private-subnet-2",
              "kubernetes.io/cluster/observability-platform-dev-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "observability-platform-dev-private-subnet-2",
              "Project": "observability-platform",
              "kubernetes.io/cluster/observability-platform-dev-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-09ea04bebf9fca5da"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:711387107956:subnet/subnet-0039023fed1441da7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0039023fed1441da7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "711387107956",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "observability-platform-dev-private-subnet-3",
              "kubernetes.io/cluster/observability-platform-dev-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "observability-platform-dev-private-subnet-3",
              "Project": "observability-platform",
              "kubernetes.io/cluster/observability-platform-dev-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-09ea04bebf9fca5da"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:711387107956:subnet/subnet-0584e9080cb2aafd8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0584e9080cb2aafd8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "711387107956",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "observability-platform-dev-public-subnet-1",
              "kubernetes.io/cluster/observability-platform-dev-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "observability-platform-dev-public-subnet-1",
              "Project": "observability-platform",
              "kubernetes.io/cluster/observability-platform-dev-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-09ea04bebf9fca5da"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:711387107956:subnet/subnet-01c795ba4b070cd78",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c795ba4b070cd78",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "711387107956",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "observability-platform-dev-public-subnet-2",
              "kubernetes.io/cluster/observability-platform-dev-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "observability-platform-dev-public-subnet-2",
              "Project": "observability-platform",
              "kubernetes.io/cluster/observability-platform-dev-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-09ea04bebf9fca5da"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:711387107956:subnet/subnet-0092422a1445ef5ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0092422a1445ef5ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "711387107956",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "observability-platform-dev-public-subnet-3",
              "kubernetes.io/cluster/observability-platform-dev-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "observability-platform-dev-public-subnet-3",
              "Project": "observability-platform",
              "kubernetes.io/cluster/observability-platform-dev-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-09ea04bebf9fca5da"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:711387107956:vpc/vpc-09ea04bebf9fca5da",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c78edb53c2ee8e0b",
            "default_route_table_id": "rtb-0f449811e62d649a0",
            "default_security_group_id": "sg-0068cf342a4618f71",
            "dhcp_options_id": "dopt-06c302ad9fa4344bb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09ea04bebf9fca5da",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f449811e62d649a0",
            "owner_id": "711387107956",
            "tags": {
              "Name": "observability-platform-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "observability-platform-dev-vpc",
              "Project": "observability-platform"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}